--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,11 +33,39 @@ section {
       background-repeat: no-repeat;
       background-size: cover; }
 
+.center-flex {
+  display: flex;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  width: 100%;
+  height: 100%;
+  color: #FFF;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.4); }
+  @media (max-width: 768px) {
+    .center-flex {
+      width: 50%; } }
+
+.flex-box {
+  display: flex;
+  display: -webkit-flex;
+  display: -ms-flexbox; }
+  .flex-box .col {
+    margin: 5px;
+    padding: 10px;
+    text-align: center; }
+
+.center {
+  text-align: center;
+  margin: 0 auto; }
+
 header {
   background-color: #FFF;
   width: 100%;
   height: 60px;
-  padding: 10px 5%; }
+  padding: 10px 5%;
+  position: fixed;
+  z-index: 6; }
   header nav {
     height: 100%;
     float: right; }
@@ -54,5 +82,15 @@ header {
           padding: 5px;
           width: 100%;
           height: 100%; }
+
+.circle {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  background-color: #333;
+  margin: 0 auto;
+  padding: 25px; }
+  .circle > img {
+    width: 60px; }
 
 /*# sourceMappingURL=style.css.map */
