--- a/sass/layouts/_base.sass
+++ b/sass/layouts/_base.sass
@@ -33,3 +33,26 @@ section
       height: 100%
       background-repeat: no-repeat
       background-size: cover
+
+.center-flex
+  +flex()
+  width: 100%
+  height: 100%
+  color: #FFF
+  align-items: center
+  background: rgba(0,0,0,0.4)
+
+  @media (max-width: 768px)
+    width: 50%
+    
+
+.flex-box
+  +flex()
+  .col
+    margin: 5px
+    padding: 10px
+    text-align: center
+
+.center
+  text-align: center
+  margin: 0 auto
