--- a/sass/layouts/_header.sass
+++ b/sass/layouts/_header.sass
@@ -3,7 +3,8 @@ header
   width: 100%
   height: 60px
   padding: 10px 5%
-
+  position: fixed
+  z-index: 6
   nav
     height: 100%
     float: right
